Changed build gradle to use pitest and remove errors